--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -120,10 +120,10 @@
 \renewcommand{\mod}[3]{#1 \equiv #2 \ (\textrm{mod} \ #3)}
 
 \DeclareMathOperator{\dps}{\displaystyle}
-\newcommand{\sigal}{$\sigma$-álgebra\ }
-\newcommand{\sigals}{$\sigma$-álgebras\ }
-\DeclareMathOperator{\borel}{\mathcal{B}(\R)}
-\DeclareMathOperator{\h}{\mathcal{H}}
+\newcommand{\sigal}{$\sigma$-álgebra\;}
+\newcommand{\sigals}{$\sigma$-álgebras\;}
+\DeclareMathOperator{\borel}{\mathcal{B}}
+\DeclareMathOperator{\cc}{\mathcal{C}}
 \newcommand{\supercite}[2]{(\citeauthor{#1}, \citeyear{#1}, #2)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
