--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -114,7 +114,9 @@
 
 \DeclareMathOperator{\seno}{\textrm{\ seno\ }}
 \DeclareMathOperator{\xreta}{\overline{\R}}
-\DeclareMathOperator{\menfus}{M(X, \Sigma)}
+
+\DeclareMathOperator{\menfus}{M(X, \mathcal{C} )}
+
 \DeclareMathOperator{\xborel}{\overline{\borel}}
 
 \renewcommand{\mod}[3]{#1 \equiv #2 \ (\textrm{mod} \ #3)}
@@ -124,6 +126,9 @@
 \newcommand{\sigals}{$\sigma$-álgebras\;}
 \DeclareMathOperator{\borel}{\mathcal{B}}
 \DeclareMathOperator{\cc}{\mathcal{C}}
+\DeclareMathOperator{\pp}{\mathcal{P}}
+
+
 \newcommand{\supercite}[2]{(\citeauthor{#1}, \citeyear{#1}, #2)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
