Gráficos finalizados, tentativa de demonstração da aproximação por funções simples, enviado ao orientador

--- a/lib/preambulo.tex
+++ b/lib/preambulo.tex
@@ -29,6 +29,10 @@
 \usepackage{amsfonts, amssymb, amsmath}             % Fonte e símbolos matemáticos
 
 \usepackage{tikz}
+\usepackage{pgf}
+\usepackage{pgfplots}
+\usetikzlibrary{positioning,shapes,fit,calc}
+\usetikzlibrary{patterns}
 
 \usepackage{booktabs}                               % Comandos para tabelas
 \usepackage{verbatim}                               % Texto é interpretado como escrito no documento
