--- a/elementos-textuais/teoria-integracao.tex
+++ b/elementos-textuais/teoria-integracao.tex
@@ -3,22 +3,26 @@
 
 Uma vez que já foram bem explorados os espaços mensuráveis e os espaços de medida, vamos medir funções mensuráveis de fato.
 Iniciaremos por funções não negativas e iremos estendendo os conceitos aos poucos.
-Quando não houver menção contrária, $(X, \Sigma, \mu)$ será um espaço de medida.
-O conjunto de todas as funções $f:X \to \xreta$ mensuráveis será simplesmente denotado por $M = M(X, \Sigma)$ e o conjunto das funções não negativas, que também são $\Sigma$-mensuráveis será denotado por $M^+ = M^+(X, \Sigma)$. 
+Quando não houver menção contrária, $(X, \cc, \mu)$ será um espaço de medida.
+O conjunto de todas as funções $f:X \to \xreta$ mensuráveis será simplesmente denotado por $M = M(X, \cc)$ e o conjunto das funções não negativas, que também são $\cc$-mensuráveis será denotado por $M^+ = M^+(X, \cc)$. 
 Assim, iniciaremos calculando a medida de funções simples
 
 \begin{definition}[Função Simples]
     Uma função real é dita simples quando possui apenas uma quantidade finita de valores.
 \end{definition}
 
+\begin{remark}
+\label{obs:Representação-padrão}
 Representaremos esse tipo de função, de forma padronizada em todo o texto, por meio da seguinte forma
 $$
 \varphi =  \sum_{j = 1}^n a_j\chi_{E_j}
 $$
-onde $a_j \in \R$ e $\chi_{E_j}$ é a função característica do conjunto $E_j \in \Sigma$.
+onde $a_j \in \R$ e $\chi_{E_j}$ é a função característica do conjunto $E_j \in \cc$.
 Nessa representação estamos supondo que cada $a_j \in \R$ é diferente para todo $j \in \N$ e que
 $\displaystyle \bigcup_{j = 1}^n E_j = X$.
-As vezes, esse tipo de função também é chamado de função escada pelo formato de seu gráfico conforme veremos adiante.
+%As vezes, esse tipo de função também é chamado de função escada pelo formato de seu gráfico conforme veremos adiante.	
+\end{remark}
+
 
 \begin{example}
 \label{ex:função-escada-part-1}
@@ -59,7 +63,7 @@ Note que os gráficos das funções $f$ e $g$ são, respectivamente.\\
 	\centering
 	\Caption{\label{fig:gráfico-função-simples-f-sobre-[0,4]} Gráfico da Função $f =\dsum_{j = 1}^2 a_j\chi_{E_j}$}	
 	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.55]
+	    \begin{tikzpicture}[scale=0.7]
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -93,7 +97,7 @@ Note que os gráficos das funções $f$ e $g$ são, respectivamente.\\
 	\centering
 	\Caption{\label{fig:gráfico-função-simples-f-sobre-[0,4]} Gráfico da Função $g =\dsum_{j = 1}^4 a_j\chi_{E_j}$}	
 	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.55]
+	    \begin{tikzpicture}[scale=0.7]
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -135,14 +139,14 @@ Note que os gráficos das funções $f$ e $g$ são, respectivamente.\\
 	    \Fonte{Elaborado pelo autor}
 	}	
     \end{figure} 
-Agora pensemos na ideia de integral aprendida no cálculo integral.
+Agora pensemos na ideia de integral apresentada na disciplina de Cálculo Diferencial e Integral.
 Se quiséssemos calcular a integral das funções acima somaríamos as áreas dos retângulos conforme ilustram as figuras a seguir.\\
     % Integral da função f
     \begin{figure}[!h]
 	\centering
 	\Caption{\label{fig:integral-função-simples-f-sobre-[0,4]} Área delimitada pelo gráfico da função $f =\dsum_{j = 1}^2 a_j\chi_{E_j}$}	
 	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.5]
+	    \begin{tikzpicture}[scale=0.7]
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -184,7 +188,7 @@ Se quiséssemos calcular a integral das funções acima somaríamos as áreas do
 	\centering
 	\Caption{\label{fig:integral-função-simples-f-sobre-[0,4]} Área delimitada pelo gráfico da função $g =\dsum_{j = 1}^4 a_j\chi_{E_j}$}	
 	\UECEfig{}{
-	    \begin{tikzpicture}[scale=0.5]
+	    \begin{tikzpicture}[scale=0.7]
                 % Eixos
                 \draw[->] (-1,0) -- (5,0) node[right] {$x$};
                 \draw[->] (0,-1) -- (0, 5) node[left] {$y$};
@@ -232,7 +236,7 @@ Se quiséssemos calcular a integral das funções acima somaríamos as áreas do
 
 \begin{definition}
 \label{def:integral-função-naonegativa-simples}
-    Se $\varphi$ é uma função simples de $M^+(X, \Sigma)$ com a representação apresentada anteriormente, então a integral da função $\varphi$ com respeito à medida $\mu$ é o valor real estendido
+    Se $\varphi$ é uma função simples de $M^+(X, \cc)$ com a representação apresentada anteriormente, então a integral da função $\varphi$ com respeito à medida $\mu$ é o valor real estendido
     $$
     \int\varphi d\mu = \sum_{j = 1}^n a_j\mu(E_j).
     $$
@@ -240,105 +244,222 @@ Se quiséssemos calcular a integral das funções acima somaríamos as áreas do
 
 Para a definição \ref{def:integral-função-naonegativa-simples} empregamos a convenção que $0 \cdot (+\infty) = 0$.
 Isto é feito para garantir que a função identicamente nula tenha integral nula independentemente da medida ser finita ou não.
-Veremos propriedades elementares sobre a integral de funções simples, mas antes provaremos alguns resultados auxiliares.
+A seguir veremos propriedades elementares sobre a integral de funções simples.
+Antes disso, considere um espaço de medida $(X, \cc, \mu)$.
+Seja  $\{E_n\}$ uma partição de $X$ com $n \in I_5$ conforme a representação a seguir.\pagebreak
+\begin{figure}[h]
+	\centering
+	\Caption{\label{fig:particao-E-de-X} Partição $\{E_n\}$ do conjunto $X$} 
+	\UECEfig{}{
+		% Partição de X por E_n
+		\begin{tikzpicture}
+			% Define coordenadas que serão utilizadas posteriormente
+			\path
+			coordinate (aux0) at (0,1.5)
+			coordinate (aux1) at (0,3.5)
+			coordinate (aux2) at (10,3.5)
+			coordinate (aux3) at (9,6)
+			coordinate (aux4) at (4,0)
+			coordinate (aux5) at (7,0)
+			coordinate (aux6) at (2,6)
+			coordinate (aux7) at (5,6)
+			coordinate (esp1) at (0.2,2.5)
+			coordinate (esp2) at (1.5,1.5)
+			coordinate (esp3) at (3,0.1)
+			coordinate (esp4) at (5.5,1.1)
+			coordinate (esp5) at (8,0.5)
+			coordinate (esp6) at (8.75,2)
+			coordinate (esp7) at (9.7,3)
+			coordinate (esp8) at (6.5,4.5)
+			coordinate (esp9) at (3.8,5.8)
+			coordinate (esp10) at (1.5,4)
+			coordinate (nome) at (0, 6)
+			;
+			% Desenha curvas com angulação de saida e entrada
+			\draw[line width=0.8pt]
+			(esp1) to[out=-90,in=170]
+			(esp2) to[out=-10,in=170]
+			(esp3) to[out=-10,in=180]
+			(esp4) to[out=0,in=180]
+			(esp5) to[out=10,in=-150]
+			(esp6) to[out=20,in=-90]
+			(esp7) to[out=90,in=-60]
+			(esp8) to[out=120,in=0]
+			(esp9) to[out=180,in=0]
+			(esp10) to[out=180,in=90]
+			cycle;    
+			% Limita a figura às coordenadas citadas
+			\clip
+			(esp1) to[out=-90,in=170]
+			(esp2) to[out=-10,in=170]
+			(esp3) to[out=-10,in=180]
+			(esp4) to[out=0,in=180]
+			(esp5) to[out=10,in=-150]
+			(esp6) to[out=20,in=-90]
+			(esp7) to[out=90,in=-60]
+			(esp8) to[out=120,in=0]
+			(esp9) to[out=180,in=0]
+			(esp10) to[out=180,in=90]
+			cycle;    
+			
+			\draw[fill=green!40]
+			(aux4) to[bend right=10]
+			(aux6) --
+			(aux7) to[bend left=10]
+			(aux5) -- cycle;
+			\draw[fill=green!40]
+			(aux5) to[bend right=10]
+			(aux7) --
+			(10,6) --
+			(10,0) -- cycle;
+			\draw[fill=green!40]
+			(aux0) -- 
+			(aux1) to[bend right=10]
+			(aux3) --
+			(10,6) -- 
+			(aux2) to[bend left=10] cycle;
+			\draw[fill=green!40]
+			(0,0) -- 
+			(aux4) to[bend right=10]
+			(aux6) --
+			(0,6) -- 
+			(0,0) -- cycle;
+			\draw[fill=green!40]
+			(0,6) -- 
+			(aux1) to[bend right=10]
+			(aux3) --
+			(0,6) -- cycle;
+			\node at (4,5) {$E_1$};  
+			\node at (2,2) {$E_2$};  
+			\node at (6,3.3) {$E_3$};  
+			\node at (4.4,1.3) {$E_4$};  
+			\node at (7.5,2) {$E_5$};
+			\node at (0.1,5.5) {$X$};  
+			
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
 
-\begin{lemma}
-\label{lem:medida-da-intersecao-de-um-fixado}
-    Se $\mu$ é uma medida sobre $X$ e fixemos um elemento $A$ de $\mathcal{H}$, então a função $\lambda$ definida por $\lambda(E) = \mu(A\cap E), \ \forall E \in \h$ é uma medida sobre $X$.
-\end{lemma}
-\begin{prova}
-    Basta mostrar que $\lambda$ satisfaz as condições impostas na definição \ref{def:medida}.
-    Com isso, se $E = \varnothing$, então
-    $$
-    \lambda(\varnothing) = \mu(A \cap \varnothing) = \mu(\varnothing) = 0
-    $$
-    Como $A$ e $E$ são elementos de $\h$, então $A \cap H$ também está em $\h$.
-    Assim, por $\mu$ ser uma medida, temos que $\mu(A\cap E) \geq 0$ acarretando que $\lambda(E) \geq 0$.
-    Por fim, tomemos uma sequência de elementos disjuntos $(E_n)$ em $\h$.
-    Se $A = E_j$ para algum $j \in \N$, não há o que fazer.
-    Caso $A \cap E_j = \varnothing$ para qualquer que seja $j \in \N$, então $\displaystyle \left( \bigcup_{n \in \N} E_n\right) \cap A = \varnothing$.
-    Com isso, 
+\hspace{-2cm}Tome também uma outra partição $\{F_m\}$ onde $m \in I_6$.\\
 
-    \begin{align*}
-        \left( \bigcup_{n \in \N} E_n\right) \cap A
-        = &
-        (E_1 \cup E_2 \cup \cdots \cup E_n \cup \cdots) \cap A\\
-        = &
-        (E_1 \cap A )\cup (E_2 \cap A) \cup \cdots \cup (E_n\cap A) \cup \cdots \\
-        = &
-        \bigcup_{n \in \N} (E_n\cap A)    
-    \end{align*}
-    %   
-    Segue então que
-    $$
-    \lambda\left( \bigcup_{n \in \N} E_n\right)
-    =
-    \mu\left(\left( \bigcup_{n \in \N} E_n\right) \cap A\right)
-    =
-    \mu\left( \bigcup_{n \in \N} (E_n\cap A) \right)
-    =
-    \sum_{j = 1}^\infty \mu(E_j \cap A)
-    = 
-    \sum_{j = 1}^\infty \lambda(E_j)
-    $$
-    Com isso, concluímos que a função $\lambda$ acima definida é uma medida.
-\end{prova}
-
-\begin{lemma}
-\label{lem:medida-gerada-por-medidas-e-numeros-reais}
-    Se $\mu_1, ..., \mu_n$ são medidas sobre $X$ e $a_1, ... , a_n$ são números reais não negativos, então a função $\lambda$ definida por
-    $\lambda(E) = \dsum_{j =1}^n a_j\mu_j(E), \forall E \in \Sigma$ é uma medida sobre $X$.
-\end{lemma}
-\begin{prova}
-    Como $\mu_j$ é uma medida para todo $j \in I_n$ e cada $a_j$ é maior ou igual à zero, temos que cada $a_j\mu_j(E) \geq 0$.
-    Desta forma, $\lambda(E) = \displaystyle \sum_{j = 1}^n a_j\mu_j(E) \geq 0$.
-    Além disso, podemos observar que $\lambda(\varnothing) = \displaystyle \sum_{j =1}^n a_j\mu_j(\varnothing) = 0$.
-    Tomemos uma sequência disjunta $(E_p)$ de elementos de $\h$.
-    Logo, 
-    $$
-    \lambda\left(\bigcup_{p \in \N} E_p\right)
-    =
-    \sum_{j = 1}^n a_j\mu_j\left(\bigcup_{p \in \N} E_p\right)
-    =
-    \sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
-    $$
-    Afirmamos que $\displaystyle \sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right) = \sum_{p = 1}^\infty\left(\sum_{j = 1}^na_j\mu_j(E_p)\right)$.
-    Com efeito, 
-    \begin{align*}
-        \sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
-        = &
-        \sum_{j = 1}^n a_j\left(\lim_{m \to +\infty}\sum_{p = 1}^m\mu_j(E_p)\right)\\
-        = &
-        \lim_{m \to +\infty}\left[\sum_{j = 1}^n a_j\left(\sum_{p = 1}^m\mu_j(E_p)\right)\right]\\
-        = &
-        \lim_{m \to +\infty}\left[a_1\left(\sum_{p = 1}^m\mu_1(E_p)\right)+ \cdots + a_n\left(\sum_{p = 1}^m\mu_n(E_p)\right)\right]\\
-        = &
-        \lim_{m \to +\infty}\left(\sum_{p = 1}^ma_1\mu_1(E_p)+ \cdots + \sum_{p = 1}^ma_n\mu_n(E_p)\right)\\
-        = &
-        \lim_{m \to +\infty}\sum_{p = 1}^m \left(a_1\mu_1(E_p)+ \cdots + a_n\mu_n(E_p)\right)\\
-        = &
-        \lim_{m \to +\infty}\sum_{p = 1}^m \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)\\
-        = &
-        \sum_{p = 1}^\infty \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)\\
-    \end{align*}
-    Disso tudo, obtemos que 
-    $$
-    \lambda\left(\bigcup_{p \in \N} E_p\right)
-    =
-    \sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
-    =
-    \sum_{p = 1}^\infty \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)
-    =
-    \sum_{p = 1}^\infty \lambda(E_p)
-    $$
-    Como $\lambda$ satisfaz todas as condições impostas na definição \ref{def:medida} concluímos que $\lambda$ é uma medida.    
-\end{prova}
-
-
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig:particao-F-de-X} Partição $\{F_m\}$ do conjunto $X$} 
+	\UECEfig{}{
+		% Partição F_m
+		\begin{tikzpicture}
+			% Define coordenadas que serão utilizadas posteriormente
+			\path
+			coordinate (aux0) at (1.1,2)
+			coordinate (aux1) at (0,3.5)
+			coordinate (aux2) at (10,3.5)
+			coordinate (aux3) at (9,6)
+			coordinate (aux4) at (4,0)
+			coordinate (aux5) at (7,0)
+			coordinate (aux6) at (2,6)
+			coordinate (aux7) at (5,6)
+			coordinate (aux8) at (11,2)
+			coordinate (aux9) at (3,8.2)
+			coordinate (esp1) at (0.2,2.5)
+			coordinate (esp2) at (1.5,1.5)
+			coordinate (esp3) at (3,0.1)
+			coordinate (esp4) at (5.5,1.1)
+			coordinate (esp5) at (8,0.5)
+			coordinate (esp6) at (8.75,2)
+			coordinate (esp7) at (9.7,3)
+			coordinate (esp8) at (6.5,4.5)
+			coordinate (esp9) at (3.8,5.8)
+			coordinate (esp10) at (1.5,4)
+			coordinate (nome) at (0, 6)
+			;
+			% Desenha curvas com angulação de saida e entrada
+			\draw[line width=0.8pt]
+			(esp1) to[out=-90,in=170]
+			(esp2) to[out=-10,in=170]
+			(esp3) to[out=-10,in=180]
+			(esp4) to[out=0,in=180]
+			(esp5) to[out=10,in=-150]
+			(esp6) to[out=20,in=-90]
+			(esp7) to[out=90,in=-60]
+			(esp8) to[out=120,in=0]
+			(esp9) to[out=180,in=0]
+			(esp10) to[out=180,in=90]
+			cycle;    
+			% Limita a figura às coordenadas citadas
+			\clip
+			(esp1) to[out=-90,in=170]
+			(esp2) to[out=-10,in=170]
+			(esp3) to[out=-10,in=180]
+			(esp4) to[out=0,in=180]
+			(esp5) to[out=10,in=-150]
+			(esp6) to[out=20,in=-90]
+			(esp7) to[out=90,in=-60]
+			(esp8) to[out=120,in=0]
+			(esp9) to[out=180,in=0]
+			(esp10) to[out=180,in=90]
+			cycle;    
+			
+			\draw[fill=cyan!35] 
+			(0,0) rectangle (10,6);
+			\draw
+			(0,0) 
+			to[bend right = 20] 
+			(aux7)
+			to[bend right = 22] 
+			(aux1);
+			\draw
+			(0,3) 
+			to[bend left = 10] 
+			(10,2)
+			to[bend right = 10]
+			(5,-6);
+			\draw
+			(5,0) 
+			to[bend right = 20] 
+			(aux7)
+			to[bend right = 22] 
+			(aux1);
+			
+			
+			% Rótulos
+			\node at (4,5) {$F_1$};  
+			\node at (2,2) {$F_2$};  
+			\node at (6.5,3.3) {$F_3$};  
+			\node at (4.4,1.3) {$F_4$};  
+			\node at (7.5,2) {$F_5$};  
+			\node at (5,3.5) {$F_6$};
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+Claramente, ao observar as figuras acima, podemos ver que $E_3$ possui interseção com $F_j$ para todo $j \in I_6$.
+Assim, $E_5 = \displaystyle \bigcup_{j = 1}^6 (F_j\cap E_5)$ com $(F_j\cap E_5) = \varnothing,\ \forall j \in I_6$. 
+Logo, 
+$$
+\mu(E_5) = \mu\left(\bigcup_{j = 1}^6 (F_j\cap E_5)\right)
+= 
+\sum_{j=1}^{6}\mu(F_j\cap E_5)
+$$
+A igualdade acima é valida mesmo se o conjunto em questão não tiver interseção com todos os outros da partição.
+Neste caso, a interseção com os demais será vazia e soma associada à eles é 0.
+Basta observar, por exemplo, o conjunto $E_1$ que tem interseção com $F_1, F_6$ e $F_3$, mas não se intersecta com $F_2, F_4$ e $F_5$.
+Deste modo,
+$$
+\sum_{j=1}^{6}\mu(F_j\cap E_3)
+= \mu(F_1\cap E_3) + \mu(F_6\cap E_3) + \mu(F_3\cap E_3)
+= \mu(E_3)
+$$
+Pois, $\mu(F_2\cap E_3) = \mu(F_4\cap E_3) = \mu(F_5\cap E_3) = 0$.
 
 
 \begin{theorem}
-    Se $\varphi$ e $\psi$ são funções simples do espaço $M^+(X,\Sigma)$ e $c\geq0$ é uma constante real, então
+	\label{teo:aritmetica-com-integrais-de-funções-simples}
+    Se $\varphi$ e $\psi$ são funções simples do espaço $M^+(X,\cc)$ e $c\geq0$ é uma constante real, então
     $$
     \int c\varphi d\mu = c \int \varphi d\mu,
     $$
@@ -418,3 +539,411 @@ Veremos propriedades elementares sobre a integral de funções simples, mas ante
     $$
     Segue que $\displaystyle\int(\varphi + \psi) d\mu = \int \varphi d\mu + \int \psi d\mu$ como queríamos.
 \end{prova}
+
+
+% Lemas para o teorema
+
+\begin{lemma}
+	\label{lem:medida-da-intersecao-de-um-fixado}
+	Se $\mu$ é uma medida sobre $X$ e fixemos um elemento $A$ de $\cc$, então a função $\lambda$ definida por $\lambda(E) = \mu(A\cap E), \ \forall E \in \cc$ é uma medida sobre $X$.
+\end{lemma}
+\begin{prova}
+	Basta mostrar que $\lambda$ satisfaz as condições impostas na definição \ref{def:medida}.
+	Com isso, se $E = \varnothing$, então
+	$$
+	\lambda(\varnothing) = \mu(A \cap \varnothing) = \mu(\varnothing) = 0
+	$$
+	Como $A$ e $E$ são elementos de $\cc$, então $A \cap H$ também está em $\cc$.
+	Assim, por $\mu$ ser uma medida, temos que $\mu(A\cap E) \geq 0$ acarretando que $\lambda(E) \geq 0$.
+	Por fim, tomemos uma sequência de elementos disjuntos $(E_n)$ em $\cc$.
+	Se $A = E_j$ para algum $j \in \N$, não há o que fazer.
+	Caso $A \cap E_j = \varnothing$ para qualquer que seja $j \in \N$, então $\displaystyle \left( \bigcup_{n \in \N} E_n\right) \cap A = \varnothing$.
+	Com isso, 
+	
+	\begin{align*}
+		\left( \bigcup_{n \in \N} E_n\right) \cap A
+		= &
+		(E_1 \cup E_2 \cup \cdots \cup E_n \cup \cdots) \cap A\\
+		= &
+		(E_1 \cap A )\cup (E_2 \cap A) \cup \cdots \cup (E_n\cap A) \cup \cdots \\
+		= &
+		\bigcup_{n \in \N} (E_n\cap A)    
+	\end{align*}
+	%   
+	Segue então que
+	$$
+	\lambda\left( \bigcup_{n \in \N} E_n\right)
+	=
+	\mu\left(\left( \bigcup_{n \in \N} E_n\right) \cap A\right)
+	=
+	\mu\left( \bigcup_{n \in \N} (E_n\cap A) \right)
+	=
+	\sum_{j = 1}^\infty \mu(E_j \cap A)
+	= 
+	\sum_{j = 1}^\infty \lambda(E_j)
+	$$
+	Desta forma, concluímos que a função $\lambda$ acima definida é uma medida.
+\end{prova}
+
+\begin{lemma}
+	\label{lem:medida-gerada-por-medidas-e-numeros-reais}
+	Se $\mu_1, ..., \mu_n$ são medidas sobre $X$ e $a_1, ... , a_n$ são números reais não negativos, então a função $\lambda$ definida por
+	$\lambda(E) = \dsum_{j =1}^n a_j\mu_j(E), \forall E \in \cc$ é uma medida sobre $X$.
+\end{lemma}
+\begin{prova}
+	Como $\mu_j$ é uma medida para todo $j \in I_n$ e cada $a_j$ é maior ou igual à zero, temos que cada $a_j\mu_j(E) \geq 0$.
+	Desta maneira, $\lambda(E) = \displaystyle \sum_{j = 1}^n a_j\mu_j(E) \geq 0$.
+	Além disso, podemos observar que $\lambda(\varnothing) = \displaystyle \sum_{j =1}^n a_j\mu_j(\varnothing) = 0$.
+	Tomemos uma sequência disjunta $(E_p)$ de elementos de $\cc$.
+	Logo, 
+	$$
+	\lambda\left(\bigcup_{p \in \N} E_p\right)
+	=
+	\sum_{j = 1}^n a_j\mu_j\left(\bigcup_{p \in \N} E_p\right)
+	=
+	\sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
+	$$
+	Afirmamos que $\displaystyle \sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right) = \sum_{p = 1}^\infty\left(\sum_{j = 1}^na_j\mu_j(E_p)\right)$.
+	Com efeito, 
+	
+	\begin{align*}
+		\sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
+		= &
+		\sum_{j = 1}^n a_j\left(\lim_{m \to +\infty}\sum_{p = 1}^m\mu_j(E_p)\right)\\
+		= &
+		\lim_{m \to +\infty}\left[\sum_{j = 1}^n a_j\left(\sum_{p = 1}^m\mu_j(E_p)\right)\right]\\
+		= &
+		\lim_{m \to +\infty}\left[a_1\left(\sum_{p = 1}^m\mu_1(E_p)\right)+ \cdots + a_n\left(\sum_{p = 1}^m\mu_n(E_p)\right)\right]\\
+		= &
+		\lim_{m \to +\infty}\left(\sum_{p = 1}^ma_1\mu_1(E_p)+ \cdots + \sum_{p = 1}^ma_n\mu_n(E_p)\right)\\
+		= &
+		\lim_{m \to +\infty}\sum_{p = 1}^m \left(a_1\mu_1(E_p)+ \cdots + a_n\mu_n(E_p)\right)\\
+		= &
+		\lim_{m \to +\infty}\sum_{p = 1}^m \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)\\
+		= &
+		\sum_{p = 1}^\infty \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)\\
+	\end{align*}
+	Disso tudo, obtemos que 
+	$$
+	\lambda\left(\bigcup_{p \in \N} E_p\right)
+	=
+	\sum_{j = 1}^n a_j\left(\sum_{p = 1}^\infty\mu_j(E_p)\right)
+	=
+	\sum_{p = 1}^\infty \left(\sum_{j = 1}^na_j\mu_j(E_p)\right)
+	=
+	\sum_{p = 1}^\infty \lambda(E_p)
+	$$
+	Como $\lambda$ satisfaz todas as condições impostas na definição \ref{def:medida} concluímos que $\lambda$ é uma medida.    
+\end{prova}
+
+\begin{theorem}
+	\label{teo:medida-atraves-de-uma-integral}
+	A função $\lambda: \cc \to \xreta$ definida por
+	$
+	\displaystyle\lambda(E) = \int \varphi\chi_E\ d\mu
+	$
+	para todo $E \in \cc$ é uma medida sobre $\cc$. 
+\end{theorem}
+
+\begin{prova}
+	De maneira análoga ao teorema \ref{teo:aritmetica-com-integrais-de-funções-simples}
+	podemos verificar que 
+	$$
+	\varphi\chi_E = \sum_{j = 1}^n a_j\chi_{E_j \cap E}
+	$$
+	Assim, temos que 
+	\begin{align*}
+		\lambda(E) 
+		= \int \varphi\chi_E d\mu
+		= \int\left(\sum_{j = 1}^n a_j\chi_{E_j \cap E}\right)d\mu
+		= \sum_{j = 1}^n\left(a_j\int \chi_{E_j \cap E}d\mu\right) 
+		= \sum_{j = 1}^n a_j\mu(E_j\cap E)
+	\end{align*}
+	Pelo lema \ref{lem:medida-da-intersecao-de-um-fixado} a aplicação que leva 
+	$E \to \mu(E_j\cap E)$ é uma medida para cada $j \in I_n$.
+	Disso, concluímos que $\lambda$ pode ser expressada por uma combinação linear de medidas sobre $\cc$.
+	Segue, pelo lema \ref{lem:medida-gerada-por-medidas-e-numeros-reais}, que 
+	$\lambda$ também é uma medida sobre $\cc$.
+\end{prova}
+
+% Mostrar que existe uma função simples que aproxima uma função
+
+Até aqui trabalhos com integrais de funções simples apenas.
+Considere a função $f: \R \to \R$ tal que $f(x) = \mathrm{seno}(x) + 3$.
+Claramente não é uma função simples, pois não possui uma quantidade finita de valores. 
+Nosso objetivo, agora, é tentar calcular a integral dessa função com o que construímos até aqui.
+Para facilitar, analisaremos o gráfico dessa função no intervalo $[0,4]$.\\
+
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig:gráfico da função sen x + 3} Gráfico da função $f(x) = \textrm{sen}(x) + 3$} 
+	\UECEfig{}{
+		\begin{tikzpicture}
+			% Eixos
+			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
+			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
+			
+			% Plot do gráfico
+			%	\draw[domain=0:1,very thick,variable=\x,blue] plot ({\x},{1});
+			%	\draw[domain=1:2,very thick,variable=\x,blue] plot ({\x},{2});
+			%	\draw[domain=2:3,very thick,variable=\x,blue] plot ({\x},{3});
+			%	\draw[domain=3:4,very thick,variable=\x,blue] plot ({\x},{4});
+			%	
+			
+			%	% Retangulos
+			%	\foreach \i in {0, 1,2,3}{
+				%		\draw[fill=blue!30, dashed](\i,0) rectangle (\i+1,\i +1);
+				%	}
+			%	
+			% Bolinhas de intervalos aberto e fechado
+			%	\foreach \i in {1,2,3}{
+				%		\draw[fill=white] (\i,\i+1) circle (0.08);
+				%	}
+			%	\foreach \i in {1,2,3,4}{
+				%		\draw[fill=blue] (\i,\i) circle (0.08);
+				%	}
+			%	
+			% Rótulos
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+			}
+			
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
+			}
+			
+			
+%			\fill[domain=0:4,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3+sin(\x r)})--(4,0)--(0,0);
+%			% Yes, this is drawn twice, but I wanted the shading to match the over/under pictures following.
+			
+			
+			\draw[domain=0:4,smooth,variable=\x, ultra thick]  plot ({\x},{3+sin(\x r)})  node[above right] {{\small $f(x) = \textrm{sen}\,x + 3$}};
+			\draw[dashed, green!40!black]  (4,0)--(4,4);
+			
+			
+			
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+\hspace{-2cm}Tomemos a função simples 
+$$
+\phi_2(x) =\sum_{j = 1}^{2} a_j\chi_{E_j}
+$$
+onde $a_1 = f(0), a_2 = f(4); E_1 = [0, 2)$ e $E_2 = [2, 4]$.
+Assim, ao calcularmos sua integral, vemos não há preenchimento total da área delimitada pelo gráfico da função $f$, mas se aproxima com um erro conforme a seguinte figura.
+\pagebreak
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig: integral da funçao phi 2} Integral da função $\phi_2$} 
+	\UECEfig{}{
+		\begin{tikzpicture}
+			% Eixos
+			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
+			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
+			
+			% Rótulos
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+			}
+			
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
+			}
+				% Plot do gráfico
+			\filldraw[domain=0:2,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3})--(2,0)--(0,0);
+			\filldraw[domain=2:4,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{2.24})--(4,0)--(2,0);	
+			
+			\draw[domain=0:4,smooth,variable=\x, ultra thick]  plot ({\x},{3+sin(\x r)})  node[above right] {{\small $f(x) = \textrm{sen}\,x + 3$}};
+	
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+
+\hspace{-2cm} Vamos escolher outra função simples $\phi_4$ tal que $\phi_4 =\sum_{j = 1}^{4} a_j\chi_{E_j}$
+onde 
+$E_1 = [0, 1), E_2 = [1, 2), E_3 = [2, 3), E_1 = [3, 4],
+a_1 = f(0), a_2 = f(1), a_3 = f(3)$ e $a_4 = f(4)$.
+Desta forma, com o dobro de valores da função $\phi_2$ escolhida anteriormente podemos observar que a integral de $\phi_4$ mais se aproxima da integral da função $f$.
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig:integral da função phi 4} Integral da função $\phi_4$} 
+	\UECEfig{}{
+		\begin{tikzpicture}
+			% Eixos
+			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
+			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
+			
+			% Plot do gráfico
+			\filldraw [domain=0:1,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3})--(1,0)--(0,0);
+			\filldraw[domain=1:2,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.87})--(2,0)--(1,0);	
+			\filldraw[domain=2:3,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.14})--(3,0)--(2,0);
+			\filldraw[domain=3:4,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{2.24})--(4,0)--(3,0);
+					
+			% Rótulos
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+			}
+			
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
+			}
+			
+			\draw[domain=0:4,smooth,variable=\x, ultra thick]  plot ({\x},{3+sin(\x r)})  node[above right] {{\small $f(x) = \textrm{sen}\,x + 3$}};
+			
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+
+\hspace{-2cm} Para finalizarmos esta ideia, dobremos a quantidade de valores e escolhamos outra função 
+$\phi_8 =\displaystyle\sum_{j = 1}^{8} a_j\chi_{E_j}$ 
+onde 
+$E_1 = [0, 0.5), E_2 = [0.5, 1), E_3 = [1, 1.5), E_4 = [1.5, 2),
+E_5 = [2,2.5), E_6 = [2.5, 3), E_7 = [3, 2.5), E_8 = [3.5, 4]$ 
+e
+$a_1 = f(0), a_2 = f(0.5), a_3 = f(1), a_4 = f(1.5),
+a_5 = f(2.5), a_6 = f(3), a_7 = f(3.5)$ e $a_8 = f(4)$.\\
+
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig:integrla da função phi 8} Integral da função $\phi_8$} 
+	\UECEfig{}{
+		\begin{tikzpicture}
+			% Eixos
+			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
+			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
+			
+			% Plot do gráfico
+			\filldraw [domain=0:0.5,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3})--(0.5,0)--(0,0);
+			
+			\filldraw [domain=0.5:1,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3.48})--(1,0)--(0.5,0);
+			
+			\filldraw[domain=1:1.5,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.84})--(1.5,0)--(1,0);	
+			
+			\filldraw[domain=1.5:2,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.91})--(2,0)--(1.5,0);
+			
+			\filldraw[domain=2:2.5,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.6})--(2.5,0)--(2,0);
+			
+			\filldraw[domain=2.5:3,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{3.14})--(3,0)--(2.5,0);
+			
+			\filldraw[domain=3:3.5,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{2.65})--(3.5,0)--(3,0);
+			
+			\filldraw[domain=3.5:4,smooth,variable=\x, cyan, fill opacity=0.4] plot ({\x},{2.24})--(4,0)--(3.5,0);
+			
+			% Rótulos
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+			}
+			
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
+			}
+			
+			\draw[domain=0:4,smooth,variable=\x, ultra thick]  plot ({\x},{3+sin(\x r)})  node[above right] {{\small $f(x) = \textrm{sen}\,x + 3$}};
+			
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+
+Com isso, observamos que quanto mais valores a função simples possui, mais ela se aproxima da função $f$ desde que nenhum valor ultrapasse o gráfico da função.
+Assim, a área da função simples será próxima o suficiente da área delimitada pelo gráfico da função $f$.
+Assim, se tomarmos o supremo dessas funções obteremos
+\begin{figure}[h!]
+	\centering
+	\Caption{\label{fig:Integral da função f} Integral da função $f$} 
+	\UECEfig{}{
+		\begin{tikzpicture}
+			% Eixos
+			\draw[->] (-1,0) -- (5,0) node[right] {$x$};
+			\draw[->] (0,-1) -- (0, 5) node[left] {$y$};
+			% Rótulos
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+			}
+			
+			\foreach \i in {-1,1,2,3,4}{
+				\draw (2pt,\i)--(-2pt, \i) node[left]{{\footnotesize $\i$}};
+			}
+			\fill[domain=0:4,smooth,variable=\x, cyan, fill opacity=0.4]  plot ({\x},{3+sin(\x r)})--(4,0)--(0,0);
+			% Yes, this is drawn twice, but I wanted the shading to match the over/under pictures following.
+			
+			
+			\draw[domain=0:4,smooth,variable=\x, ultra thick]  plot ({\x},{3+sin(\x r)})  node[above right] {{\small $f(x) = \textrm{sen}\,x + 3$}};
+		\end{tikzpicture}
+		
+	}{
+		\Fonte{Elaborado pelo autor}
+	}   
+\end{figure}
+
+Dito isto, adiante formalizaremos que dada uma função $f \in \menfus$, então ela pode ser aproximada por uma sequência de funções simples conforme o teorema
+
+\begin{theorem}[Aproximação Via Funções Simples]
+	\label{teo:aproximação via funções simples}
+	Se $f$ é uma função não negativa em $\menfus$, então existe uma sequência de funções $(\varphi_n) \in \menfus$ tal que
+	\begin{enumerate}[label*=(\roman*)]
+		\item $0 \leq \varphi_n(x) \leq \varphi_{n+1}(x)$ para todo $x \in X$ e $n \in \N$;
+		\item $f(x) = \lim_{n \to \infty} \varphi_n(x)$ para todo $x \in X$;
+		\item Cada $\varphi_n$ é uma função simples, isto é, possui apenas uma quantidade finita de valores reais.
+	\end{enumerate}
+\end{theorem} 
+
+\begin{prova}
+	Seja $n$ um número natural fixado.
+	Defina conjuntos $E_{kn}$, para $k = 0,1,...,n2^n -1$, pondo
+	$$
+	E_{kn} =\left\{ x \in X; \dfrac{k}{2^n} \leq f(x) < \dfrac{k+1}{2^n}\right\}.
+	$$  
+	Se, por ventura, $k = n2^n$, então defina $E_{kn}$ como 
+	$\{x \in X; f(x) \geq n\}$. 
+	Afirmamos que os conjuntos $\{E_{kn}; k = 0, 1, ..., n2^n\}$ são todos disjuntos.
+	Com efeito, suponha, por redução ao absurdo, que exista um $a \in X$ tal que
+	$a \in E_{kn}$ e $a \in E_{(k+1)n}$.
+	Assim, $\dfrac{k}{2^n} \leq f(a) < \dfrac{k+1}{2^n}$ e $\dfrac{k+1}{2^n} \leq f(a) < \dfrac{k+2}{2^n}$.
+	Logo, $f(a) < \dfrac{k+1}{2^n}$ e $\dfrac{k+1}{2^n} \leq f(a)$ uma contradição. 
+	Portanto, $\{E_{kn}; k = 0,1,...,n2^n\}$ são todos disjuntos.
+	Além disso, cada $E_{kn}$  é um elemento de $\cc$, pois 
+	\begin{align*}
+		a \in E_{kn}
+		\Leftrightarrow &
+		\dfrac{k}{2^n} \leq f(a) < \dfrac{k+1}{2^n}\\
+		\Leftrightarrow &
+		\dfrac{k}{2^n} \leq f(a)\textrm{\ e\ } f(a)< \dfrac{k+1}{2^n}\\
+		\Leftrightarrow &
+		a \in \left\{x \in X; \dfrac{k}{2^n} \leq f(x)\right\} \textrm{\ e\ } \left\{x \in X; f(x)< \dfrac{k+1}{2^n}\right\}
+	\end{align*}
+
+	Desta forma, $E_{kn} = \left\{x \in X; \dfrac{k}{2^n} \leq f(x)\right\} \cap 
+	\left\{x \in X; f(x)< \dfrac{k+1}{2^n}\right\}$.
+	Como, $f$ é mensurável, $\left\{x \in X; \dfrac{k}{2^n} \leq f(x)\right\} \in \cc$ e $\left\{x \in X; f(x)< \dfrac{k+1}{2^n}\right\} \in \cc$.
+	Logo, $E_{kn} \in \cc$.
+	Com isso, defina $\varphi_n:E_{kn} \to \R$ pondo $\varphi_n(x) = \dfrac{k}{2^n}$.
+ \end{prova}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
