criação do capítulo 'espaços e funçõpes mensuráveis' corrijido

--- a/documento.tex
+++ b/documento.tex
@@ -177,6 +177,7 @@
 	%\imprimirresumo{elementos-pre-textuais/resumo}
 	%\imprimirabstract{elementos-pre-textuais/abstract}
 	\imprimirlistadeilustracoes
+	\input{elementos-pre-textuais/simbolos.tex}
 	\imprimirsumario
 	
 	%Elementos textuais
@@ -187,7 +188,7 @@
         % \input{elementos-textuais/5objetivos}
         %\input{elementos-textuais/6metodologia}
         % \input{elementos-textuais/7cronograma}
-        \input{elementos-textuais/teoria-medida}
+        \input{elementos-textuais/espacos-funcoes-mensuraveis}
         \input{elementos-textuais/teoria-integracao}
         %Elementos pós-textuais	
 	\bibliography{elementos-pos-textuais/referencias}
