--- a/elementos-textuais/espacos-funcoes-mensuraveis.tex
+++ b/elementos-textuais/espacos-funcoes-mensuraveis.tex
@@ -349,7 +349,9 @@ Embora a decomposição de intervalos reais pela união de outros é extremament
 \section{Funções Mensuráveis}
 
 
-Agora que já estamos familiarizados com o conceito de conjunto mensurável, nada mais natural que estender este conceito à funções. Trabalharemos apenas com funções de uma variável real, por enquanto.
+Agora que já estamos familiarizados com os conceitos de \sigal e espaços mensuráveis, vamos aplicar, sobre este espaço uma função e estudar seu comportamento.
+\footnote{Em todo o texto função, aplicação e mapa são sinônimos.}
+Iniciaremos tratando de funções à valores reais e estenderemos o conceito conforme haja necessidade.
 Além disso, a partir de agora, fixemos que quando não houver menção contrária,  que $X$ será um conjunto qualquer diferente de $\varnothing$ e $\mathcal{C}$ será uma \sigal desse conjunto. 
 
 \begin{definition}
@@ -363,63 +365,70 @@ Além disso, a partir de agora, fixemos que quando não houver menção contrár
 \label{ex:funcao-constante}
 	Seja $K \in \R$ um número fixado. 
 	A função $f: X \to \R$ definida por $f(x) = K$, para todo $x \in \R$  é $\cc$-mensurável.
-	Para mostrarmos este fato, precisamos analisar os casos de $\alpha$.
-	\begin{enumerate}[label*= (\Roman*)]
-	\item Se $\alpha \geq K$, então o conjunto $\{x \in X; f(x) > \alpha\} = \varnothing$ uma vez que não existe $x \in X$ tal que $K = f(x) > \alpha$.
-	\item Se $\alpha < K$, então  o conjunto $\{x \in X; f(x) > \alpha\} = X$, pois todo $f(x) > \alpha,\ \forall x \in X$.
-	\end{enumerate}
-	Em todo caso, para todo $\alpha \in \R$, o conjunto  $\{x \in X;\ f(x) > \alpha\} \in \mathcal{C}$.
-	Portanto, a função constante $f$ é $\cc$-mensurável.
 \end{example}
-
+Para mostrarmos este fato, precisamos analisar os casos de $\alpha$.
+Assim
+	\begin{enumerate}[label*= (\Roman*)]
+		\item Se $\alpha \geq K$, então o conjunto $\{x \in X; f(x) > \alpha\} = \varnothing$ uma vez que não existe $x \in X$ tal que $f(x)= K > \alpha$.
+		\item Se $\alpha < K$, então para todo $x \in X$, $f(x) > \alpha$.
+		Logo, o conjunto $\{x \in X; f(x) > \alpha\} = X$.
+	\end{enumerate}
+Em todo caso, para todo $\alpha \in \R$, o conjunto  $\{x \in X;\ f(x) > \alpha\} \in \mathcal{C}$.
+Portanto, a função constante $f$ é $\cc$-mensurável.
 \begin{example}[Função Característica]
     Seja $(X, \mathcal{C})$ uma espaço mensurável e $A \in \mathcal{C}$.
-    Chamamos de função característica \footnote{As vezes também é chamada  função indicadora.}
-    a função $\chi_A: X \to \{0,1\}$ definida por 
+    A função característica \footnote{As vezes também é chamada  função indicadora.} de $A$ 
+    $\chi_A: X \to \{0,1\}$ definida por 
     $$\chi_A(x) =\left\{\begin{array}{cc}
          1, & \textrm{\ se \ } x \in A \\
          0, & \textrm{\ se \ } x \notin A
     \end{array}\right.
     $$
-	Para verificar se $X_A$ é $\cc$-mensurável precisamos, novamente, analisar os casos de $\alpha \in \R$.
+    É $\cc$-mensurável.
+\end{example}
+
+Para verificar se $X_A$ é $\cc$-mensurável precisamos, novamente, analisar os casos de $\alpha \in \R$.
 	\begin{enumerate}[label*= (\Roman*)]
 		\item Se $\alpha \geq 1$, observamos que $\{x \in X; \chi_A(x)>  \alpha\} = \varnothing$, pois não há $x \in X$ tal que $\chi_A(x) > 1$.  
 		\item Se $ 0 <\alpha < 1$, então o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = A$, pois apenas valores $x \in A$ tem suas imagens $\chi_A(x) = 1$ e consequentemente $\chi_A(x) \geq \alpha$.
 		\item  se $\alpha \leq 0$, podemos notar que o conjunto $\{x \in X; \chi_A(x)>  \alpha\} = X$, pois para qualquer que seja $x \in X$, os valores $\chi_A(x) \geq 0$.
 	\end{enumerate}
-	Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um elemento de $\mathcal{C}$, pois $\varnothing, X$ e $A$ são elementos de $\mathcal{C}$. Portanto, a função característica $\chi_A(x)$ é $\cc$-mensurável.
-\end{example}
-
+Em todo o caso, vemos que o conjunto $\{x \in X; \chi_A(x)>  \alpha\}$ é um elemento de $\mathcal{C}$, pois $\varnothing, X$ e $A$ são elementos de $\mathcal{C}$. Portanto, a função característica $\chi_A(x)$ é $\cc$-mensurável.
 \begin{example}
 \label{ex:função-continua-mensuravel}
     Considere o espaço mensurável $(\R, \borel)$. Toda função $f: \R \to \R$ contínua é Borel mensurável.
 \end{example}
-	Para mostrar a validade do exemplo, \supercite{elon}{p.226} mostra um resultado que nos auxilia
+	Para mostrar a validade do exemplo acima, precisamos de resultados auxiliares que encontraremos em \cite{elon}.
+	Um deles é a proposição abaixo.
 \begin{proposition}
 \label{cit:função-continua-mensuravel}
 	Suponha que $f:X \to \R$ seja contínua em todos os pontos de $X$.
-	Se $X \subset \R$ é um aberto, então o conjunto $A = \{a \in X;\ f(a)>k\}$ é um aberto. 
+	Se $X \subset \R$ é um aberto
+	\footnote{Em caso de dúvida sobre o que é um subconjunto $X$ de $\R$ aberto, consulte \supercite{elon}{p.164}.}, então o conjunto $A = \{a \in X;\ f(a)>k\}$ é um aberto (p.226).
 \end{proposition}
 
-	Assim, como $\R$ é um conjunto aberto, então $\{x \in \R; f(x) > \alpha\}$, para todo $\alpha \in \R$, é um conjunto aberto.
-	Mas, segundo \supercite{elon}{p.167}, temos o seguinte teorema
+	Note que o conjunto $\{x \in \R; f(x) > \alpha\} = (\alpha, +\infty)$.
+	Logo, trata-se de um conjunto aberto.
+	\footnote{Vide \supercite{elon}{p.164}.}
+	Além disso, em \supercite{elon}{p.167}, encontramos o seguinte teorema:
 	
 	\begin{theorem}[Estrutura de abertos da reta]
 		\label{teo:estrutura-abertos-reta}
 		Todo subconjunto aberto $A \subset R$ se exprime, de modo único, como um reunião enumerável de intervalos abertos dois a dois disjuntos.
 	\end{theorem}
-	Segue, então que 
+	
+	Segue disso que o
 	$\{x \in \R; f(x) > \alpha\} = \displaystyle \bigcup_{j = 1}^\infty A_n$ onde cada $A_n$ é um intervalo aberto, ou seja $A_n \in \borel$ para todo $n \in \N$.
-	Com isso, pela definição \ref{def:sigma-algebra}, $\{x \in \R; f(x) > \alpha\} \in \borel$.
+	Com isso, pela definição \ref{def:sigma-algebra}, o conjunto $\{x \in \R; f(x) > \alpha\} \in \borel$.
 	Portanto, qualquer função contínua $f: \R \to \R$ é Borel mensurável.
 
 
-    Lembre que ao apresentarmos a Álgebra de Borel (definição \ref{def:algebra-borel}), também mostramos no teorema \ref{teo:equiv-borel} que há mais de uma maneira de definir os borelianos.
+    Lembre que ao apresentarmos a Álgebra de Borel (definição \ref{def:algebra-borel}), mostramos no teorema \ref{teo:equiv-borel} que há mais de uma maneira de definir os borelianos.
     Para uma função $f: X \to \R$ $\cc$-mensurável, também podemos definir uma função $\cc$-mensurável por meio de conjuntos diferentes conforme o seguinte teorema.
 
 \begin{theorem}
 \label{teo:equiv-funcoes-mensuraveis}
-    Sendo $(X,\mathcal{C})$ um espaço mensurável, para uma função $f: X \to \R$, as seguintes afirmações são equivalentes:
+    Sendo $(X,\mathcal{C})$ um espaço mensurável, para uma função $f: X \to \R$ $\cc$-mensurável as seguintes afirmações são equivalentes:
     \begin{multicols}{2}
         
     \begin{enumerate}[label=(\alph*)]
@@ -474,7 +483,7 @@ Portanto, segue de $(I), (II)$ e $(III)$ que as afirmações $(a), (b), (c)$ e $
 \end{prova}
 
 % Aritmética de Funções mensuráveis
-Perceba que mesmo na presença do teorema \ref{teo:equiv-funcoes-mensuraveis} acima mostrar que uma função é mensurável é trabalhoso e repetitivo uma vez que, geralmente, é preciso verificar os casos de $\alpha$.
+Perceba que mesmo na presença do teorema \ref{teo:equiv-funcoes-mensuraveis} acima, mostrar que uma função é mensurável é trabalhoso e repetitivo uma vez que, geralmente, é preciso verificar os casos de $\alpha$.
 Com o intuito de otimizar a identificação de uma função mensurável, veremos o comportamento de operações aritméticas entre funções mensuráveis.
 
 \begin{proposition}
@@ -502,12 +511,12 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
                 Assim, 
                 $$cf(x) >\alpha \Leftrightarrow -zf(x) >\alpha \Leftrightarrow f(x) < -\dfrac{\alpha}{z}$$
                 Assim, o conjunto $\{x \in X; cf(x) > \alpha \} = \left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}$.
-                Desta forma, o conjunto  $\left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}  \in \mathcal{C}$ pelo  item $(d)$ do teorema \ref{teo:equiv-funcoes-mensuraveis}. Portanto,  $cf$ é $\cc$-mensurável.
+                Desta forma, o conjunto  $\left\{x \in X; f(x) < -\dfrac{\alpha}{z}\right\}  \in \mathcal{C}$ pelo  item $(d)$ do teorema \ref{teo:equiv-funcoes-mensuraveis}. Portanto,  $cf$ é $\cc$-mensurável em todos os casos de $c \in \R$.
             \end{enumerate}
             
-        \item Para mostrar a mensurabilidade de $f^2$ é também ŕ necessário analisar os casos de $\alpha$.
+        \item Para mostrar a mensurabilidade de $f^2$ é também necessário analisar os casos de $\alpha$.
             \begin{enumerate}[label = (\roman*)]
-                \item Se $\alpha < 0$, então $\{x \in X; [f(x)]^2 > \alpha\} = X$ pois $[f(x)]^2 \geq 0$ para todo $x \in X$.
+                \item Se $\alpha < 0$, então $\{x \in X; [f(x)]^2 > \alpha\} = X$, pois $[f(x)]^2 \geq 0$ para todo $x \in X$.
                 
                 \item Se $\alpha \geq 0$, então para todo $x \in X$ $[f(x)]^2 > \alpha \Leftrightarrow f(x) > \pm \sqrt{\alpha}$.
                 Assim, um elemento 
@@ -523,7 +532,7 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
             
         \item Analogamente ao item anterior, se $\alpha < 0$, $\{x \in X; |f(x)| > \alpha\} = X$.
         Por outro lado, se $\alpha \geq 0$, vemos que 
-        $\{x \in X; |f(x)| > \alpha\}\{x \in X; f(x)> \alpha\} \cup \{x \in X; f(x)> -\alpha\}$.
+        $\{x \in X; |f(x)| > \alpha\}=\{x \in X; f(x)> \alpha\} \cup \{x \in X; f(x)> -\alpha\}$.
         Assim, a mensurabilidade de $f$ acarreta na mensurabilidade de $|f|$ como desejávamos.
     \end{enumerate}
 \end{prova}
@@ -533,12 +542,12 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
 \label{ex:funcao-afim-mensuravel}
     Seja $a$ um número real diferente de zero. 
     A função $f: \R \to \R$ tal que $f(x) = ax$ é $\borel$-mensurável.
-    De fato, pelo exemplo \ref{ex:função-continua-mensuravel} a função $x$ é $\borel$-mensurável, pois é contínua em $\R$.
-    Segue pela proposição \ref{prop:aritmetica-uma-funcao} que a função $ax$ também é $\borel$-mensurável.
 \end{example}
-   
-    Da maneira análoga, as funções $g,h: \R \to \R$ tais que $g(x) = x^2$ e $h(x) = |x|$ são $\borel$-mensuráveis. 
-    A seguir veremos a mensurabilidade de combinações de funções mensuráveis.
+	
+	De fato, pelo exemplo \ref{ex:função-continua-mensuravel} a função $x$ é $\borel$-mensurável, pois é contínua em $\R$.
+	Segue pela proposição \ref{prop:aritmetica-uma-funcao} que a função $ax$ também é $\borel$-mensurável.
+	Da maneira análoga, as funções $g,h: \R \to \R$ tais que $g(x) = x^2$ e $h(x) = |x|$ são $\borel$-mensuráveis. 
+	A seguir veremos a mensurabilidade de combinações de funções mensuráveis.
 
 
 \begin{proposition}
@@ -550,13 +559,13 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
     Provaremos, primeiramente, que $f+g$ é $\cc$-mensurável.
     Ora, por hipótese, $f$ e $g$ são $\cc$-mensuráveis. 
     Assim, dado $r \in \Q$, os conjuntos $\{x \in X; f(x) > r\}$ e 
-        $\{x \in X; g(x) > \alpha -r\}$ são ambos elementos de $\mathcal{C}$.
-        Considere o conjunto  
-        
-        $$H_r = \{x \in X; f(x) > r\} \cap \{x \in X;\ g(x) > \alpha -r\}$$
-        Isto é, o conjunto dos elementos $x \in X$ tal que $f(x) 
-        > r$ e $g(x) >\alpha -r$ simultaneamente.
-        Assim, afirmamos que $\{x \in X; (f+g)(x) > \alpha\} = \displaystyle \bigcup_{r \in \Q} H_r$. Com efeito, as seguintes equivalências ocorrem para um elemento $a \in X$ tomado arbitrariamente
+    $\{x \in X; g(x) > \alpha -r\}$ são ambos elementos de $\mathcal{C}$.
+    Considere o conjunto  
+    
+    $$H_r = \{x \in X; f(x) > r\} \cap \{x \in X;\ g(x) > \alpha -r\}$$
+    Isto é, o conjunto dos elementos $x \in X$ tal que $f(x) 
+    > r$ e $g(x) >\alpha -r$ simultaneamente.
+    Assim, afirmamos que $\{x \in X; (f+g)(x) > \alpha\} = \displaystyle \bigcup_{r \in \Q} H_r$. Com efeito, as seguintes equivalências ocorrem para um elemento $a \in X$ tomado arbitrariamente
         \begin{align*}
             a \in \{x \in X; (f+g)(x) > \alpha\} 
             \Leftrightarrow  & (f+g)(a) >\alpha \\
@@ -566,11 +575,13 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
             \Leftrightarrow & a \in \{x \in X; f(x) > r\} \textrm{\ e\ } a \in \{x \in X; f(x) > \alpha - r\}\  \textrm{para  } \ r \in \Q\\
             \Leftrightarrow & a \in \{x \in X; f(x) > r\} \cap \{x \in X; f(x) > \alpha - r\}\  \textrm{para  }  r \in \Q\\
             \Leftrightarrow & a \in H_r,\ \textrm{para  } \ r \in \Q\\
-            \Leftrightarrow &a \in \bigcup_{r \in \Q} H_r
+            \Leftrightarrow &a \in \bigcup_{r \in \Q} H_r.
         \end{align*}
+    
     Concluindo que a afirmação é verdadeira. 
     Além disso, para cada $r \in \Q$, o conjunto $H_r$ é um elemento de $\mathcal{C}$, pois é  a interseção de dois elementos de $\mathcal{C}$ (proposição \ref{prop:interseção-elementos-sigmas}).
-    Note também que, pela definição de $\mathcal{C}$, a coleção $\displaystyle \bigcup_{r \in \Q} H_r$ é um elemento de $\mathcal{C}$, pois $\Q$ é enumerável.
+    Note também que, pela definição de $\mathcal{C}$, a coleção $\displaystyle \bigcup_{r \in \Q} H_r$ é um elemento de $\mathcal{C}$, pois $\Q$ é enumerável
+    \footnote{Em caso de dúvida, vide \supercite{elon}{p.51}.}.
     Segue que $f+g$ é $\cc$-mensurável.
 
     Para mostrar que $fg$ é mensurável basta notar que é a combinação de outras funções $\cc$-mensuráveis.
@@ -581,7 +592,7 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
 	        =& \ [f(x)]^2 - [f(x)]^2 + 2f(x)g(x) + [g(x)]^2 - [g(x)]^2 + 2f(x)g(x)\\
 	        =& \ \left([f(x)]^2 + 2f(x)g(x) + [g(x)]^2\right)  - \left([g(x)]^2 - 2f(x)g(x) + [f(x)]^2\right)\\
 	        =& \ (f(x) +g(x))^2 - (f(x) - g(x))^2\\
-	        =& \ [(f+g)(x)]^2 - [(f-g)(x)]^2
+	        =& \ [(f+g)(x)]^2 - [(f-g)(x)]^2.
 	    \end{align*}
     Desta maneira, $fg = \dfrac{1}{4}\left[(f+g)^2 - (f-g)^2\right]$. Segue pela proposição \ref{prop:aritmetica-uma-funcao} e a primeira parte desta demonstração que $fg$ é $\cc$-mensurável.
 \end{prova}
@@ -600,41 +611,52 @@ Seja $f: X \to \R$ uma função real $\cc$-mensurável e $c \in \R$. Então as f
 	\label{def:parte-positiva e negativa}
     Seja $f: X \to \R$ uma função real. Dizemos que a \textbf{parte positiva} da função $f$ é a função $f^+: X \to \R$ definida por $f^+(x) = \sup\{f(x), 0\}$.
     Semelhantemente, chamamos de a \textbf{parte negativa} da função $f$, a função $f^-: X \to \R$ definida por $f^-(x) = \sup\{-f(x), 0\}$.
+    \footnote{Em caso de dúvidas sobre o supremo de um conjunto real, vide \supercite{elon}{p.75}.}
 \end{definition}
 
+É possível  que a definição de parte positiva e negativa de funções fique um pouco abstrata em um primeiro contato. 
+Numa tentativa de esclarecer ao máximo, daremos o seguinte exemplo:
 \begin{example}
-    Seja $f: \R^* \to \R$ definida por $f(x) =\dfrac{|x|}{x}$. Se tomarmos, $x< 0$, vemos que $f(x) < 0$ sendo $f(x) = \dfrac{-x}{x} = -1$.
-    Se $x>0$, então $f(x) =\dfrac{x}{x} = 1$. Assim, $f^+ = \sup\{f(x), 0\} = 1$ enquanto que $f^- = \sup\{-f(x), 0\} = -1$.
+    Seja $f: \R^* \to \R$ definida por $f(x) =\dfrac{|x|}{x}$. 
+    Então $f^+(x) = 1$ e $f^-(x) = -1$.
 \end{example}
 
-Neste caso, tanto a parte positiva quanto a parte negativa da função $f$ acima apresentada são funções constantes
-conforme está representado na imagem a seguir.\\
+De fato, ao tomarmos um elemento real $x< 0$, vemos que sua imagem $f(x) < 0$ sendo $f(x) = \dfrac{-x}{x} = -1$.
+Se $x>0$, então $f(x) =\dfrac{x}{x} = 1$. 
+Assim, $f^+ = \sup\{f(x), 0\} = 1$ enquanto que $f^- = \sup\{-f(x), 0\} = -1$.
+Neste caso, podemos perceber, ao olhar para a imagem \ref{fig: Gráfico da Função f(x) =|x|/x} a seguir que tanto a parte positiva quanto a parte negativa da função $f$ acima apresentada são ambas funções constantes.\\
 
     \begin{figure}[h!]
 	\centering
 	\Caption{\label{fig: Gráfico da Função f(x) =|x|/x} Gráfico da Função $f(x) =\dfrac{|x|}{x}$}	
 	\UECEfig{}{
 	    \begin{tikzpicture}[scale=0.7]
-            % \draw[black, smooth] (-3.2,-1.5) rectangle (3,3.2);
-                % Cria o eixo cartesiano
-                \draw[->] (-3,0) -- (4,0) node[right] {$x$};
-                \draw[->] (0,-1.5) -- (0,3) node[left] {$y$};
+	    	% Eixos
+	    	\draw[->] (-4,0) -- (4.2,0) node[right] {$x$};
+	    	\draw[->] (0,-2.5) -- (0, 3) node[left] {$y$};
+	    	% Rótulos
+	    	\foreach \i in {-4,-3,-2,-1,1,2,3,4}{
+	    		\draw (\i,2pt)--(\i, -2pt) node[below]{{\footnotesize $\i$}};
+	    	}
+	    	\foreach \i in {-2,-1,1,2}{
+	    		\draw (2pt,\i)--(-2pt,\i) node[left]{{\footnotesize $\i$}};
+	    	}
                 
-                \draw[domain=-3:-0.1,very thick,variable=\x,blue] plot ({\x},{abs(\x)/\x});
-                \draw[domain=0.1:3.8,very thick,variable=\x,blue] plot ({\x},{abs(\x)/\x});
-            
-                \draw[fill=white] (0,1) circle (0.1) node[left] {1};
-                \draw[fill=white] (0,-1) circle (0.1)node[right] {-1};
-            
+            \draw[domain=-4:-0.1,ultra thick,variable=\x,blue] plot ({\x},{abs(\x)/\x});
+            \draw[domain=0.1:4,ultra thick,variable=\x,blue] plot ({\x},{abs(\x)/\x});
+        
+            \draw[fill=white] (0,1) circle (0.1);
+            \draw[fill=white] (0,-1) circle (0.1);
+        
             \end{tikzpicture}
 	}{
 	    \Fonte{Elaborado pelo autor}
 	}	
     \end{figure}    
 
-    Por serem constantes, já vimos que são mensuráveis.
-    Mas e a função $f(x) =\dfrac{|x|}{x}$? Será que é mensurável?
-    A resposta é sim e para mostrarmos isso precisaremos de alguns resultados auxiliares. 
+Por serem constantes, já vimos que são mensuráveis.
+Mas e a função $f(x) =\dfrac{|x|}{x}$? Será que é mensurável?
+A resposta é sim e para mostrarmos isso precisaremos de alguns resultados auxiliares. 
     \begin{lemma}
     \label{lem:decomposicao-da-funcao-em-partes-positiva-negativa}
         Seja $f: X \to \R$ uma função real. Então $f = f^+ - f^-$ e $|f| = f^+ + f^-$.
@@ -661,18 +683,18 @@ conforme está representado na imagem a seguir.\\
             Portanto, $f^+ + f^- = |f|$.
     \end{prova}
 
-    Observe que o lema \ref{prop:decomposicao-da-funcao-em-partes-positiva-negativa} nos dá a forma das funções $f^+$ e $f^-$ de maneira implicita.
-    De fato, somando as duas expressões membro a membro vemos que 
-    $$f + |f| = (f^+ + f^+) - (f^- + f^-) = 2f^+$$
-    Assim, podemos expressar $f^+ = \dfrac{|f| + f}{2}$.
-    De modo semelhante, pode-se subtrair membro a membro e obter a expressão $f^- = \dfrac{|f| - f}{2}$. 
-    Isso demonstra o lema adiante
+Observe que o lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} nos dá a forma das funções $f^+$ e $f^-$ de maneira implicita.
+De fato, somando as duas expressões membro a membro vemos que 
+$$f + |f| = (f^+ + f^+) - (f^- + f^-) = 2f^+$$
+Assim, podemos expressar $f^+ = \dfrac{|f| + f}{2}$.
+De modo semelhante, pode-se subtrair membro a membro e obter a expressão $f^- = \dfrac{|f| - f}{2}$. 
+Isso demonstra o lema adiante:
 
     \begin{lemma}
     \label{prop:identidades-das-partes-das-funcoes}
         Se $f: X \to \R$ é uma função real, então $f^+ = \dfrac{|f| + f}{2}$ e $f^- = \dfrac{|f| - f}{2}$.
     \end{lemma}
-	
+Com isso, podemos responder à indagação anterior por meio do seguinte teorema:
     \begin{theorem}
         Uma função $f: X \to \R$ é $\cc$-mensurável se, e somente se, suas partes negativa e positiva são ambas $\cc$-mensuráveis. 
     \end{theorem}
@@ -682,10 +704,12 @@ conforme está representado na imagem a seguir.\\
         Pela proposição \ref{prop:aritmetica-uma-funcao} vemos que a função $|f|$ é $\cc$-mensurável e pelo lema \ref{prop:identidades-das-partes-das-funcoes} as funções $f^+ = \dfrac{1}{2}(|f| + f)$ e $f^+ = \dfrac{1}{2}(|f| - f)$ também são $\cc$-mensuráveis.
         Desta forma, as funções $f^+$ e $f^-$ são combinações aritméticas de funções $\cc$-mensuráveis.
         Segue pela proposição \ref{prop:aritmetica-duas-funcoes} que $f^+$ e $f^-$ são $\cc$-mensuráveis.
-        Reciprocamente, supondo que $f^+$ e $f^-$ são mensuráveis, temos pelo lema \ref{prop:decomposicao-da-funcao-em-partes-positiva-negativa} que
+        Reciprocamente, supondo que $f^+$ e $f^-$ são mensuráveis, temos pelo lema \ref{lem:decomposicao-da-funcao-em-partes-positiva-negativa} que
         $f = f^+ - f^-$. Segue, novamente pela proposição \ref{prop:aritmetica-duas-funcoes}, que $f$ é $\cc$-mensurável. 
     \end{prova}
 
+Uma vez que foram apresentadas as definições de \sigal, espaços mensuráveis e funções mensuráveis; nosso alicerce está totalmente consolidado para que possamos entender o que é uma medida medida sem muita dificuldade.
+Isso faremos na seção seguinte
 
     % \begin{example}
     %         Seja $f: \R \to \R$ definida por  $f(x) = (\cos x, \seno x)$.
